--- a/index.html
+++ b/index.html
@@ -78,19 +78,19 @@
                             <p class="member-name">
                             Name
                         </p>
-                        <img src="../w3_band/assets/img/member.jpg" alt="Name" class="member-img">
+                        <img src="./assets/img/member.jpg" alt="Name" class="member-img">
                     </div>
                     <div class="col col-third s-col-full mt-32 text-center">
                         <p class="member-name">
                             Name
                         </p>
-                        <img src="../w3_band/assets/img/member.jpg" alt="Name" class="member-img">
+                        <img src="./assets/img/member.jpg" alt="Name" class="member-img">
                     </div>
                     <div class="col col-third s-col-full mt-32 text-center">
                         <p class="member-name">
                             Name
                         </p>
-                        <img src="../w3_band/assets/img/member.jpg" alt="Name" class="member-img">
+                        <img src="./assets/img/member.jpg" alt="Name" class="member-img">
                     </div>
                    
                 </div>
